salesforce_sfdx/main/default/objects/Lead/fields/OSFMX_CurrentlyFuel__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CurrentlyFuel__c</fullName>
    <label>Combustible que actualmente usas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aceite reciclado</fullName>
            </value>
            <value>
                <fullName>Combusteco</fullName>
            </value>
            <value>
                <fullName>Combustoleo</fullName>
            </value>
            <value>
                <fullName>Coque</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Gas LP</fullName>
            </value>
            <value>
                <fullName>Heavy Oil</fullName>
            </value>
            <value>
                <fullName>Zuavit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>