salesforce_sfdx/main/default/objects/Lead/fields/OSFMX_InterestedSolution__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_InterestedSolution__c</fullName>
    <label>¿Qué solución le interesa?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Climatización</fullName>
            </value>
            <value>
                <fullName>Eficiencia Energética</fullName>
            </value>
            <value>
                <fullName>Generación en sitio</fullName>
            </value>
            <value>
                <fullName>GNC/GNV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>