salesforce_sfdx/main/default/objects/Lead/fields/OSFMX_SolutionType__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_SolutionType__c</fullName>
    <label>Tipo de oportunidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gas Natural</fullName>
            </value>
            <value>
                <fullName>Electricidad</fullName>
            </value>
            <value>
                <fullName>Otras soluciones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>