salesforce_sfdx/main/default/objects/Lead/fields/OSFPE_fld_Compania_relacionada__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Compania_relacionada__c</fullName>
    <defaultValue>&quot;Cliente Potencial&quot;</defaultValue>
    <description>Identificar si es un cliente de EEP, ESP o de ambos.</description>
    <label>Compañia relacionada</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente Cuenta Clave</fullName>
            </value>
            <value>
                <fullName>Cliente EEP</fullName>
            </value>
            <value>
                <fullName>Cliente EEP + ESP</fullName>
            </value>
            <value>
                <fullName>Cliente ESP</fullName>
            </value>
            <value>
                <fullName>Cliente Potencial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>