salesforce_sfdx/main/default/objects/Lead/fields/OSFPE_fld_Responsable__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Responsable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>