salesforce_sfdx/main/default/objects/Lead/recordTypes/Electricidad.recordType-meta.xml
<RecordType>
    <fullName>Electricidad</fullName>
    <active>true</active>
    <businessProcess>Electricidad</businessProcess>
    <label>Electricidad</label>
</RecordType>