salesforce_sfdx/main/default/objects/Lead/recordTypes/GasNatural.recordType-meta.xml
<RecordType>
    <fullName>GasNatural</fullName>
    <active>true</active>
    <businessProcess>Gas Natural</businessProcess>
    <label>Gas Natural</label>
</RecordType>