salesforce_sfdx/main/default/objects/Lead/recordTypes/OSFPE_rt_Prospecto.recordType-meta.xml
<RecordType>
    <fullName>OSFPE_rt_Prospecto</fullName>
    <active>true</active>
    <businessProcess>OSFPE_sp_Prospecto</businessProcess>
    <label>Perú</label>
</RecordType>