salesforce_sfdx/main/default/objects/Lead/recordTypes/Otrassoluciones.recordType-meta.xml
<RecordType>
    <fullName>Otrassoluciones</fullName>
    <active>true</active>
    <businessProcess>Otras soluciones</businessProcess>
    <label>Otras soluciones</label>
</RecordType>